[metadata]
name = nimue
version = 0.0.1
description = Database connection pooler for Python
url = http://github.com/jlucasdba/nimue
author = James Lucas
author_email = 73145226+jlucasdba@users.noreply.github.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = nimue
python_requires = >=3.3
