[metadata]
name = nimue
version = 0.0.3
description = Database connection pooler for Python
long_description = Nimue is a database connection pool for Python. It aims to work with any thread-safe DBAPI 2.0 compliant SQL database driver. It is written in pure Python, and supports Python 3.3+. Connections in the pool are periodically checked for liveness by a background thread, and replaced if needed.
url = http://github.com/jlucasdba/nimue
author = James Lucas
author_email = 73145226+jlucasdba@users.noreply.github.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = nimue
python_requires = >=3.3
